# fit-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  command.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0ba75a84a8de_.py  2024-05-31_create_user.py  32f91a7d15da_.py  47a050c20af6_init.py  6b635f234f29_create_models.py  6bcf29b377c6_.py
api/v1/account/: api.py  controller.py  schemas.py
apps/account/: admin.py  models.py  security.py
apps/account/exceptions/: auth.py
apps/account/migrations/: 0001_initial.py  0002_token.py
apps/account/services/: auth.py  security.py
apps/utils/: convertors.py  exception.py  injector_modules.py  mixins.py  repository.py  schemas.py
apps/workout/: admin.py  dto.py  models.py  repositories.py
apps/workout/exceptions/: workout.py
apps/workout/migrations/: 0001_initial.py  0002_rename_workoutprogram_workout_and_more.py  0003_alter_workout_exercises_alter_workout_owner.py
backend/: api.py  settings.py  urls.py
domain/account/: dto.py  exceptions.py  repository.py
domain/account/services/: auth.py  token.py
domain/utils/: convertors.py  mixins.py
domain/workout/: exceptions.py  repository.py
domain/workout/services/: exercise.py  workout.py
src/: config.py  di.py  exceptions.py  main.py
src/account/: admin.py  controllers.py  dependencies.py  dto.py  models.py  repository.py
src/account/services/: user.py
src/api/v1/account/: router.py  schemas.py
src/api/v1/auth/: router.py  schemas.py
src/auth/: admin.py  controllers.py  dependencies.py  dto.py  models.py  repository.py
src/auth/services/: admin.py  authentication.py  authorization.py  hash_password.py  jwt.py  token.py
src/database/: base.py  mixins.py  unit_of_work.py
src/utils/: decorator.py
tests/api/: conftest.py  test_account.py
tests/services/: conftest.py  test_auth_token_service.py  test_exercise.py  test_workout_program.py
